# CS449GroupProject

./: .gitignore  Cargo.toml  README.md  documentation_and_writeup.org  documentation_and_writeup.tex  kanban.org  minutes.md
.github/ISSUE_TEMPLATE/: custom.md
doc/: documentation_and_writeup.org  documentation_and_writeup.tex  minutes.org  sprint1_pres.org  sprint1_pres.tex  sprint1_writeup.org  sprint1_writeup.tex  sprint2_presentation.org  sprint2_presentation.tex  sprint2_writeup.org  sprint2_writeup.tex  sprint3_presentation.org  sprint3_presentation.tex  sprint3_writeup.org  sprint3_writeup.tex
native/: Cargo.toml
native/src/: lib.rs
nmm/: Cargo.toml  README.md  notes.org  package-lock.json  package.json
nmm/lib/: index.js
nmm/lib/tests/: exports.js
nmm/native/: Cargo.toml
nmm/native/base/: Cargo.toml  default.txt
nmm/native/base/src/: lib.rs  util.rs
nmm/native/core/: Cargo.toml
nmm/native/src/: lib.rs
server/: app.js  package-lock.json  package.json  tsconfig.json
server/public/stylesheets/: style.css
server/routes/: index.js  logic.js  reset.js  users.js
server/uncompiled/sass/: default.scss
server/uncompiled/typescripts/: board.ts
server/views/: index.ejs
src/: main.rs
